--- a/package.json
+++ b/package.json
@@ -9,8 +9,13 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/vue": "^5.1.0",
     "@tailwindcss/vite": "^4.1.18",
     "astro": "^5.16.15",
+    "crypto-js": "^4.2.0",
     "tailwindcss": "^4.1.18"
+  },
+  "devDependencies": {
+    "@types/crypto-js": "^4.2.2"
   }
 }
